# Music-Platform

./: README.md  manage.py  pyproject.toml
albums/: admin.py  filters.py  models.py  permissions.py  serializers.py  tasks.py  urls.py  views.py
albums/migrations/: 0001_initial.py  0002_album_is_approved_alter_album_artist.py  0002_song.py
albums/tests/: conftest.py  test_serializers.py
artists/: admin.py  models.py  serializers.py  urls.py  views.py
artists/migrations/: 0001_initial.py  0002_alter_artist_social_link.py  0002_artist_user.py
authentication/: serializers.py  urls.py  views.py
authentication/tests/: conftest.py  test_endpoints.py
musicplatform/: RESULTS.md  celery.py  settings.py  urls.py
users/: models.py  permissions.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_bio.py  0002_alter_user_email.py
users/tests/: test_endpoints.py
